# Protei_Final_Project

./: CMakeLists.txt  README.md  client-config.json
blacklist-manager/: blacklist-manager.cpp  blacklist-manager.hpp
cdr/: cdr-writer.cpp  cdr-writer.hpp  icdr-writer.hpp
config/: config.cpp  config.hpp
http-server/: http-server.cpp  http-server.hpp
logger/: logger.cpp  logger.hpp
pgw-client/: main.cpp
pgw-server/: main.cpp
session/: session-manager.cpp  session-manager.hpp
tests/: test-blacklist-manager.cpp  test-session-manager.cpp
tests/fixtures/: base-fixture.hpp  blacklist-manager-fixture.hpp  session-manager-fixture.hpp
tests/mocks/: mock-cdr-writer.hpp
udp-client/: udp-client.cpp  udp-client.hpp
udp-server/: message-handler.cpp  message-handler.hpp  udp-server.cpp  udp-server.hpp
